bugfix: don't show button panel visibility toggle in higher resolution

--- a/css/less/button.less
+++ b/css/less/button.less
@@ -103,7 +103,7 @@ a.lms-ui-link-button + button.lms-ui-button {
   }
   @media screen and (max-width: 1200px) {
     .lms-ui-dropdown-toggle {
-      display: inline;
+      display: inline !important;
     }
     .lms-ui-dropdown-buttons {
       display: none;
